--- a/src/apps/payment/templates/stripe/connect_wallet.html
+++ b/src/apps/payment/templates/stripe/connect_wallet.html
@@ -23,7 +23,7 @@
                     check the button below to create your connect wallet
                 </p>
 
-                <a class="btn btn-success border-0" href="{% url 'stripe:connect-wallet-create' %}">
+                <a class="btn btn-success border-0" href="{% url 'razorpay:connect-wallet-create' %}">
                     <i class="fa fa-link"></i> Create Connect Wallet
                 </a>
 
@@ -46,7 +46,7 @@
                     click the button below to visit your connect wallet stripe dashboard.
                 </p>
 
-                <a class="btn btn-success border-0" href="{% url 'stripe:connect-wallet-visit' %}">
+                <a class="btn btn-success border-0" href="{% url 'razorpay:connect-wallet-visit' %}">
                     <i class="fa fa-link"></i> Visit Connect Wallet
                 </a>
 
