--- a/src/apps/payment/templates/stripe/subscription.html
+++ b/src/apps/payment/templates/stripe/subscription.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="card-body text-center border-top">
-                    <a href="{% url 'stripe:subscription-portal-link' %}">
+                    <a href="{% url 'razorpay:subscription-portal-link' %}">
                         <b>Visit Subscription management</b>
                     </a>
                 </div>
