--- a/templates/website/include/header.html
+++ b/templates/website/include/header.html
@@ -33,7 +33,7 @@
                <!-- web menubar start-->
                <div class="webMenu d-none d-lg-block position-relative">
                   <nav class="navbar navbar-expand-lg navbar-light">
-                     <a class="navbar-brand position-relative" href="index.html">
+                     <a class="navbar-brand position-relative" href="{% url 'website:home' %}">
                          <img style="height: 60px" src="{% static 'website/images/logo/logo.png' %}"
                            alt="image_not_found"></a>
                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -73,31 +73,11 @@
                                  </button>
                               </li>
                               <li class="pe-2 position-relative">
-                                 <a href="#collapseExample" data-bs-toggle="collapse" href="#collapseExample"
-                                    role="button" aria-expanded="false" aria-controls="collapseExample"><i
+                                 <a href="{% url 'client:dashboard' %}" ><i
                                        class="far fa-user" data-toggle="collapse" role="button"
                                        data-target="#use_deropdown" aria-expanded="false"
                                        aria-controls="use_deropdown"></i>
                                  </a>
-                                 <!-- user profile start -->
-                                 <div id="collapseExample" class="collapse_dropdown collapse">
-                                    <div class="dropdown_content">
-                                       <div class="profile_info clearfix">
-                                          <div class="user_thumbnail">
-                                             <img src="{% static 'website/images/meta/meta1.png' %}" alt="image_not_found">
-                                          </div>
-                                          <div class="user_content">
-                                             <h4 class="user_name">Jone Doe</h4>
-                                             <span class="user_title">Seller</span>
-                                          </div>
-                                       </div>
-                                       <ul class="settings_options ul_li_block clearfix">
-                                          <li><a href="#!"><i class="fas fa-user-circle"></i> Profile</a></li>
-                                          <li><a href="#!"><i class="fas fa-user-cog"></i> Settings</a></li>
-                                          <li><a href="#!"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
-                                       </ul>
-                                    </div>
-                                 </div>
                               </li>
                               <li class="pe-2"><a href="{% url 'website:wishlist_list' %}"><i class="far fa-heart"></i></a></li>
                               <li>
